--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body {
   position: relative;
   z-index: 1;
   text-align: center;
-  margin-top: 4rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
   font-size: 2rem;
   font-weight: bold;
   text-shadow: 0 0 10px #f30000aa, 0 0 20px #f3000055;
@@ -46,10 +47,8 @@ body {
   z-index: 1;
   padding: 2rem;
   max-width: 800px;
-  height: 300px;
-  margin: 1rem auto 0 auto;
-  top: 50%;
-  transform: translateY(-50%);
+  height: 450px;
+  margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.8);
   border: 2px solid var(--main-color);
   box-shadow: 0 0 20px #ff000055;
@@ -64,7 +63,7 @@ body {
   .terminal {
     padding: 1rem;
     margin: 2rem 1rem 0 1rem;
-    height: 250px;
+    height: 300px;
   }
 }
 
@@ -82,7 +81,7 @@ body {
   color: var(--main-color);
   padding: 0.75rem 1.5rem;
   font-size: 1.1rem;
-  margin: 3rem auto 0 auto;
+  margin: 1.5rem auto 0 auto;
   display: block;
   border-radius: 999px;
   cursor: pointer;
