--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
   text-align: center;
   margin-top: 2rem;
   margin-bottom: 1rem;
+  padding: 3rem;
   font-size: 2rem;
   font-weight: bold;
   text-shadow: 0 0 10px #f30000aa, 0 0 20px #f3000055;
@@ -47,7 +48,7 @@ body {
   z-index: 1;
   padding: 2rem;
   max-width: 800px;
-  height: 450px;
+  height: 200px;
   margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.8);
   border: 2px solid var(--main-color);
@@ -76,12 +77,12 @@ body {
 
 /* Button styling */
 #refresh-btn {
-  background-color: #111;
+  background-color: #000000;
   border: 1px solid var(--main-color);
   color: var(--main-color);
-  padding: 0.75rem 1.5rem;
+  padding: 10px;
   font-size: 1.1rem;
-  margin: 1.5rem auto 0 auto;
+  margin: 2rem auto 0 auto;
   display: block;
   border-radius: 999px;
   cursor: pointer;
