--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
 
 /* Background overlay */
 #background-overlay {
-  background: url('hands.png') bottom center/cover no-repeat;
+  background: url('hands.png') no-repeat bottom center;
+  background-size: contain;
   filter: invert(1) brightness(1.2) opacity(0.07);
   position: fixed;
   bottom: 0;
@@ -61,10 +62,8 @@ body {
 
 @media (max-width: 600px) {
   #background-overlay {
-    background-size: contain;
-    background-position: bottom center;
+    background-size: 100% auto;
   }
-
   .terminal {
     padding: 1rem;
     margin: 2rem 1rem 0 1rem;
