--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ body {
 
 /* Background overlay */
 #background-overlay {
-  background: url('hands.png') no-repeat bottom center;
-  background-size: contain;
+  background: url('hands.png') bottom center/cover no-repeat;
   filter: invert(1) brightness(1.2) opacity(0.07);
   position: fixed;
   bottom: 0;
@@ -62,8 +61,10 @@ body {
 
 @media (max-width: 600px) {
   #background-overlay {
-    background-size: 100% auto;
+    background-size: contain;
+    background-position: bottom center;
   }
+
   .terminal {
     padding: 1rem;
     margin: 2rem 1rem 0 1rem;
