--- a/style.css
+++ b/style.css
@@ -15,10 +15,15 @@ body {
   position: relative;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /* Background overlay */
 #background-overlay {
   background: url('hands.png') bottom center/cover no-repeat;
-  filter: invert(1) brightness(1.2) opacity(0.07);
+  filter: invert(1) brightness(1.2) opacity(0.09);
   position: fixed;
   bottom: 0;
   left: 0;
@@ -45,10 +50,7 @@ body {
 .terminal {
   position: relative;
   z-index: 1;
-  padding: 2rem;
   max-width: 800px;
-  height: 200px;
-  margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.8);
   border: 2px solid var(--main-color);
   box-shadow: 0 0 20px #ff000055;
@@ -69,7 +71,7 @@ body {
   .terminal {
     padding: 1rem;
     margin: 2rem 1rem 0 1rem;
-    height: 300px;
+    height: 200px;
   }
 }
 
@@ -85,9 +87,9 @@ body {
   background-color: #000000;
   border: 1px solid var(--main-color);
   color: var(--main-color);
-  padding: 2rem;
+  padding: 10px;
   font-size: 1.1rem;
-  margin: 1rem auto 0 auto;
+  margin: 2rem auto 0 auto;
   display: block;
   border-radius: 999px;
   cursor: pointer;
